# Fairscale_bounty

./: package.json
apps/backend/: Cargo.toml
apps/backend/src/: errors.rs  main.rs  models.rs  state.rs
apps/backend/src/routes/: fairscore.rs
